Mon Jan 18 18:53:08 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkscale.c (gtk_scale_set_digits): CLAMP digits into a
	meaningfull range (we need to stay below a certain limit anyways
	to avoid string buffer overflows).

	* gtk/gtkvscale.c (gtk_vscale_pos_background): fixed up background
	area calculations for GTK_POS_RIGHT and GTK_POS_BOTTOM.
	* gtk/gtkhscale.c (gtk_hscale_pos_background): likewise.
	(gtk_hscale_draw_value): safety CLAMP the value's x position for
	GTK_POS_TOP and GTK_POS_BOTTOM, so we don't paint strings outside of
	our allocation.

	* gtk/gtkscale.c: implemented GtkScale::digits, GtkScale::draw_value
	and GtkScale::value_pos arguments.

Mon Jan 18 14:26:17 1999  Owen Taylor  <otaylor@redhat.com>

	* docs/Changes-1.2.txt: Some editing, a little more
	detail.

Mon Jan 18 13:25:14 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.[ch]: Added gtk_menu_set_title() to
	set the title of a menu in the torn-off state.

	* gtk/gtkthemes.c (gtk_theme_engine_get): When loading
	of theme engine fails, just warn and do without -
	don't error out.

	* gtk/gtkmain.c (gtk_check_version): s/to/too/.

Mon Jan 18 01:21:03 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (draw_row): fixed auto resize bug.

Sun Jan 17 17:35:28 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.13

	* README:
	  INSTALL:
	  docs/gtk-config.1: ver=1.1.13

Mon Jan 18 00:22:54 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (gtk_clist_button_press) (gtk_clist_button_release):
	block drag source signal handler during column resizes.
	(gtk_clist_set_column_visibility): resize clist if needed.
	(gtk_clist_map): raise resize windows to make resize
 	cursor visible again.

Sun Jan 17 22:47:15 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.[hc]: 
	* gtk/gtkspinbutton.[hc]: 
	* gtk/gtkscrolledwindow.[hc]:
	* gtk/gtkprogressbar.[hc]:
	* gtk/gtkpreview.[hc]: 
	* gtk/gtkobject.[hc]:
	* gtk/gtkentry.[hc]: 
	* gtk/gtkctree.[hc]:
	* gtk/gtkcontainer.[hc]: